// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image Block with product link should render an anchor with the placeholder image 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wc-block-components-product-image"
      >
        <a
          aria-label="Link to Test product"
          href="http://test.com/product/test-product/"
          rel="nofollow"
        >
          <img
            alt=""
            height="500"
            src="placeholder.jpg"
            width="500"
          />
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wc-block-components-product-image"
    >
      <a
        aria-label="Link to Test product"
        href="http://test.com/product/test-product/"
        rel="nofollow"
      >
        <img
          alt=""
          height="500"
          src="placeholder.jpg"
          width="500"
        />
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Product Image Block with product link should render an anchor with the product image 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wc-block-components-product-image"
      >
        <a
          href="http://test.com/product/test-product/"
          rel="nofollow"
        >
          <img
            alt="Test product"
            data-testid="product-image"
            sizes="(max-width: 800px) 100vw, 800px"
            src="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg"
            srcset="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg 800w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-300x300.jpg 300w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-150x150.jpg 150w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-768x767.jpg 768w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-324x324.jpg 324w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-416x415.jpg 416w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-100x100.jpg 100w"
          />
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wc-block-components-product-image"
    >
      <a
        href="http://test.com/product/test-product/"
        rel="nofollow"
      >
        <img
          alt="Test product"
          data-testid="product-image"
          sizes="(max-width: 800px) 100vw, 800px"
          src="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg"
          srcset="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg 800w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-300x300.jpg 300w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-150x150.jpg 150w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-768x767.jpg 768w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-324x324.jpg 324w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-416x415.jpg 416w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-100x100.jpg 100w"
        />
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Product Image Block without product link should render an anchor with the placeholder image 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wc-block-components-product-image"
      >
        <img
          alt=""
          height="500"
          src="placeholder.jpg"
          width="500"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wc-block-components-product-image"
    >
      <img
        alt=""
        height="500"
        src="placeholder.jpg"
        width="500"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Product Image Block without product link should render an anchor with the product image 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wc-block-components-product-image"
      >
        <img
          alt="Test product"
          data-testid="product-image"
          sizes="(max-width: 800px) 100vw, 800px"
          src="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg"
          srcset="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg 800w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-300x300.jpg 300w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-150x150.jpg 150w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-768x767.jpg 768w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-324x324.jpg 324w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-416x415.jpg 416w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-100x100.jpg 100w"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wc-block-components-product-image"
    >
      <img
        alt="Test product"
        data-testid="product-image"
        sizes="(max-width: 800px) 100vw, 800px"
        src="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg"
        srcset="http://localhost:10003/wp-content/uploads/2021/01/logo-1.jpg 800w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-300x300.jpg 300w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-150x150.jpg 150w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-768x767.jpg 768w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-324x324.jpg 324w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-416x415.jpg 416w, http://localhost:10003/wp-content/uploads/2021/01/logo-1-100x100.jpg 100w"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
